[package]
name = "ctrie"
version = "0.1.0"
authors = ["Mihir Luthra <luthramihir708@gmail.com>"]
edition = "2018"
description = "WIP; Ctrie implementation in rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
